@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,7 +26,6 @@ import java.util.AbstractCollection;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -65,10 +64,10 @@ import static org.springframework.core.testfixture.TestGroup.LONG_RUNNING;
  * @author Sam Brannen
  * @since 20.01.2006
  */
-public class BeanFactoryGenericsTests {
+class BeanFactoryGenericsTests {
 
 	@Test
-	public void testGenericSetProperty() {
+	void testGenericSetProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -80,12 +79,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericListProperty() throws Exception {
+	void testGenericListProperty() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -102,7 +101,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListPropertyWithAutowiring() throws Exception {
+	void testGenericListPropertyWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -117,7 +116,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListPropertyWithInvalidElementType() {
+	void testGenericListPropertyWithInvalidElementType() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericIntegerBean.class);
 
@@ -135,7 +134,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListPropertyWithOptionalAutowiring() {
+	void testGenericListPropertyWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -147,7 +146,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMapProperty() {
+	void testGenericMapProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -159,12 +158,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericListOfArraysProperty() {
+	void testGenericListOfArraysProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -172,14 +171,14 @@ public class BeanFactoryGenericsTests {
 
 		assertThat(gb.getListOfArrays().size()).isEqualTo(1);
 		String[] array = gb.getListOfArrays().get(0);
-		assertThat(array.length).isEqualTo(2);
+		assertThat(array).hasSize(2);
 		assertThat(array[0]).isEqualTo("value1");
 		assertThat(array[1]).isEqualTo("value2");
 	}
 
 
 	@Test
-	public void testGenericSetConstructor() {
+	void testGenericSetConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -191,27 +190,27 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetConstructorWithAutowiring() {
+	void testGenericSetConstructorWithAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", new Integer(4));
-		bf.registerSingleton("integer2", new Integer(5));
+		bf.registerSingleton("integer1", 4);
+		bf.registerSingleton("integer2", 5);
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetConstructorWithOptionalAutowiring() {
+	void testGenericSetConstructorWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -223,7 +222,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetListConstructor() throws Exception {
+	void testGenericSetListConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -239,17 +238,17 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithAutowiring() throws Exception {
+	void testGenericSetListConstructorWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", new Integer(4));
-		bf.registerSingleton("integer2", new Integer(5));
+		bf.registerSingleton("integer1", 4);
+		bf.registerSingleton("integer2", 5);
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
 
@@ -258,14 +257,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
+	void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -280,7 +279,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetMapConstructor() {
+	void testGenericSetMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -296,14 +295,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceConstructor() throws Exception {
+	void testGenericMapResourceConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -316,13 +315,13 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapConstructor() {
+	void testGenericMapMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -339,16 +338,16 @@ public class BeanFactoryGenericsTests {
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
 		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
-		assertThat(gb.getPlainMap().size()).isEqualTo(2);
+		assertThat(gb.getPlainMap()).hasSize(2);
 		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
 		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
 		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndConversion() {
+	void testGenericMapMapConstructorWithSameRefAndConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -362,22 +361,22 @@ public class BeanFactoryGenericsTests {
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
 		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
-		assertThat(gb.getPlainMap().size()).isEqualTo(2);
+		assertThat(gb.getPlainMap()).hasSize(2);
 		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
 		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
 		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(new Short("1"))).isEqualTo(new Integer(0));
-		assertThat(gb.getShortMap().get(new Short("2"))).isEqualTo(new Integer(3));
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndNoConversion() {
+	void testGenericMapMapConstructorWithSameRefAndNoConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<Short, Integer> input = new HashMap<>();
-		input.put(new Short((short) 1), new Integer(0));
-		input.put(new Short((short) 2), new Integer(3));
+		input.put((short) 1, 0);
+		input.put((short) 2, 3);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 
@@ -385,13 +384,13 @@ public class BeanFactoryGenericsTests {
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
 		assertThat(gb.getShortMap()).isSameAs(gb.getPlainMap());
-		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(new Short("1"))).isEqualTo(new Integer(0));
-		assertThat(gb.getShortMap().get(new Short("2"))).isEqualTo(new Integer(3));
+		assertThat(gb.getShortMap()).hasSize(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeConstructor() {
+	void testGenericMapWithKeyTypeConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -403,12 +402,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
-		assertThat(gb.getLongMap().get(new Long("6"))).isEqualTo("7");
+		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
+		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueConstructor() {
+	void testGenericMapWithCollectionValueConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
 			@Override
@@ -420,7 +419,7 @@ public class BeanFactoryGenericsTests {
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
+		value1.add(1);
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
@@ -431,15 +430,15 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		boolean condition1 = gb.getCollectionMap().get(new Integer(1)) instanceof HashSet;
+		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
 		assertThat(condition1).isTrue();
-		boolean condition = gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList;
+		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
 		assertThat(condition).isTrue();
 	}
 
 
 	@Test
-	public void testGenericSetFactoryMethod() {
+	void testGenericSetFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -452,12 +451,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetListFactoryMethod() throws Exception {
+	void testGenericSetListFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -474,14 +473,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetMapFactoryMethod() {
+	void testGenericSetMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -498,14 +497,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceFactoryMethod() throws Exception {
+	void testGenericMapResourceFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -519,13 +518,13 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapFactoryMethod() {
+	void testGenericMapMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -544,12 +543,12 @@ public class BeanFactoryGenericsTests {
 
 		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
 		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeFactoryMethod() {
+	void testGenericMapWithKeyTypeFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -562,12 +561,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
-		assertThat(gb.getLongMap().get(new Long("6"))).isEqualTo("7");
+		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(Long.valueOf("6"))).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueFactoryMethod() {
+	void testGenericMapWithCollectionValueFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
 			@Override
@@ -580,7 +579,7 @@ public class BeanFactoryGenericsTests {
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
+		value1.add(1);
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
@@ -591,14 +590,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		boolean condition1 = gb.getCollectionMap().get(new Integer(1)) instanceof HashSet;
+		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
 		assertThat(condition1).isTrue();
-		boolean condition = gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList;
+		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
 		assertThat(condition).isTrue();
 	}
 
 	@Test
-	public void testGenericListBean() throws Exception {
+	void testGenericListBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -608,7 +607,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetBean() throws Exception {
+	void testGenericSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -618,41 +617,41 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMapBean() throws Exception {
+	void testGenericMapBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		Map<?, ?> map = (Map<?, ?>) bf.getBean("map");
-		assertThat(map.size()).isEqualTo(1);
-		assertThat(map.keySet().iterator().next()).isEqualTo(new Integer(10));
+		assertThat(map).hasSize(1);
+		assertThat(map.keySet().iterator().next()).isEqualTo(10);
 		assertThat(map.values().iterator().next()).isEqualTo(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericallyTypedIntegerBean() {
+	void testGenericallyTypedIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("integerBean");
-		assertThat(gb.getGenericProperty()).isEqualTo(new Integer(10));
-		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(new Integer(20));
-		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(new Integer(30));
+		assertThat(gb.getGenericProperty()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(20);
+		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(30);
 	}
 
 	@Test
-	public void testGenericallyTypedSetOfIntegerBean() {
+	void testGenericallyTypedSetOfIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericSetOfIntegerBean gb = (GenericSetOfIntegerBean) bf.getBean("setOfIntegerBean");
-		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(new Integer(10));
-		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(new Integer(20));
-		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(new Integer(30));
+		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(20);
+		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(30);
 	}
 
 	@Test
 	@EnabledForTestGroups(LONG_RUNNING)
-	public void testSetBean() throws Exception {
+	void testSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -672,7 +671,7 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-9493
 	 */
 	@Test
-	public void parameterizedStaticFactoryMethod() {
+	void parameterizedStaticFactoryMethod() {
 		RootBeanDefinition rbd = new RootBeanDefinition(Mockito.class);
 		rbd.setFactoryMethodName("mock");
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
@@ -683,7 +682,7 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	/**
@@ -698,7 +697,7 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-10411
 	 */
 	@Test
-	public void parameterizedInstanceFactoryMethod() {
+	void parameterizedInstanceFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -715,11 +714,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
+	void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -736,11 +735,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithWrappedClassName() {
+	void parameterizedInstanceFactoryMethodWithWrappedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition();
@@ -755,11 +754,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithInvalidClassName() {
+	void parameterizedInstanceFactoryMethodWithInvalidClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -776,11 +775,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isNull();
 		assertThat(bf.getType("mock")).isNull();
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(0);
+		assertThat(beans).hasSize(0);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithIndexedArgument() {
+	void parameterizedInstanceFactoryMethodWithIndexedArgument() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -797,11 +796,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test  // SPR-16720
-	public void parameterizedInstanceFactoryMethodWithTempClassLoader() {
+	void parameterizedInstanceFactoryMethodWithTempClassLoader() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setTempClassLoader(new OverridingClassLoader(getClass().getClassLoader()));
 
@@ -819,11 +818,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void testGenericMatchingWithBeanNameDifferentiation() {
+	void testGenericMatchingWithBeanNameDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
@@ -839,15 +838,15 @@ public class BeanFactoryGenericsTests {
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThat(numberStoreNames.length).isEqualTo(2);
+		assertThat(numberStoreNames).hasSize(2);
 		assertThat(numberStoreNames[0]).isEqualTo("doubleStore");
 		assertThat(numberStoreNames[1]).isEqualTo("floatStore");
-		assertThat(doubleStoreNames.length).isEqualTo(0);
-		assertThat(floatStoreNames.length).isEqualTo(0);
+		assertThat(doubleStoreNames).hasSize(0);
+		assertThat(floatStoreNames).hasSize(0);
 	}
 
 	@Test
-	public void testGenericMatchingWithFullTypeDifferentiation() {
+	void testGenericMatchingWithFullTypeDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
@@ -868,12 +867,12 @@ public class BeanFactoryGenericsTests {
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThat(numberStoreNames.length).isEqualTo(2);
+		assertThat(numberStoreNames).hasSize(2);
 		assertThat(numberStoreNames[0]).isEqualTo("store1");
 		assertThat(numberStoreNames[1]).isEqualTo("store2");
-		assertThat(doubleStoreNames.length).isEqualTo(1);
+		assertThat(doubleStoreNames).hasSize(1);
 		assertThat(doubleStoreNames[0]).isEqualTo("store1");
-		assertThat(floatStoreNames.length).isEqualTo(1);
+		assertThat(floatStoreNames).hasSize(1);
 		assertThat(floatStoreNames[0]).isEqualTo("store2");
 
 		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
@@ -939,7 +938,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMatchingWithUnresolvedOrderedStream() {
+	void testGenericMatchingWithUnresolvedOrderedStream() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
@@ -960,7 +959,7 @@ public class BeanFactoryGenericsTests {
 
 
 	@SuppressWarnings("serial")
-	public static class NamedUrlList extends LinkedList<URL> {
+	public static class NamedUrlList extends ArrayList<URL> {
 	}
 
 
