@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,14 @@
 
 package org.springframework.http.server.reactive;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.commons.logging.Log;
-
 import org.springframework.http.HttpCookie;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpLogging;
 import org.springframework.http.server.RequestPath;
 import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
@@ -45,8 +42,6 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 
 	private static final Pattern QUERY_PATTERN = Pattern.compile("([^&=]+)(=?)([^&]+)?");
 
-
-	protected final Log logger = HttpLogging.forLogName(getClass());
 
 	private final URI uri;
 
@@ -74,7 +69,20 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 	 * Constructor with the URI and headers for the request.
 	 * @param uri the URI for the request
 	 * @param contextPath the context path for the request
-	 * @param headers the headers for the request
+	 * @param headers the headers for the request (as {@link MultiValueMap})
+	 * @since 5.3
+	 */
+	public AbstractServerHttpRequest(URI uri, @Nullable String contextPath, MultiValueMap<String, String> headers) {
+		this.uri = uri;
+		this.path = RequestPath.parse(uri, contextPath);
+		this.headers = HttpHeaders.readOnlyHttpHeaders(headers);
+	}
+
+	/**
+	 * Constructor with the URI and headers for the request.
+	 * @param uri the URI for the request
+	 * @param contextPath the context path for the request
+	 * @param headers the headers for the request (as {@link HttpHeaders})
 	 */
 	public AbstractServerHttpRequest(URI uri, @Nullable String contextPath, HttpHeaders headers) {
 		this.uri = uri;
@@ -150,18 +158,8 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 		return queryParams;
 	}
 
-	@SuppressWarnings("deprecation")
 	private String decodeQueryParam(String value) {
-		try {
-			return URLDecoder.decode(value, "UTF-8");
-		}
-		catch (UnsupportedEncodingException ex) {
-			if (logger.isWarnEnabled()) {
-				logger.warn(getLogPrefix() + "Could not decode query value [" + value + "] as 'UTF-8'. " +
-						"Falling back on default encoding: " + ex.getMessage());
-			}
-			return URLDecoder.decode(value);
-		}
+		return URLDecoder.decode(value, StandardCharsets.UTF_8);
 	}
 
 	@Override
